# rust_fun

./: .gitignore  README.md
.github/workflows/: general.yml
actix_again/: Cargo.toml
actix_again/src/: main.rs
actix_again/src/routes/: cat.rs  hello.rs  mod.rs  temperature.rs
actix_postgres/: Cargo.toml
actix_postgres/migrations/2020-12-21-195404_create_employees/: up.sql
actix_postgres/src/: main.rs
actix_postgres/src/employees/: model.rs  routes.rs
bhaskara/: Cargo.toml
bhaskara/src/: main.rs
data_structures/: Cargo.toml
data_structures/src/: main.rs
find_duplicates/: Cargo.toml
find_duplicates/src/: main.rs
neural_network/: Cargo.toml
ownership/: Cargo.toml
ownership/src/: main.rs
simple_crud/: .env  Cargo.toml
simple_crud/src/: main.rs  routes.rs
