[package]
name = "actix_postgres"
version = "0.1.0"
authors = ["Telmo \"Trooper\" <telmo.trooper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-rt = "1.1.1"
diesel = { version = "1.4.5", features = ["postgres"]}
listenfd = "0.3.3"
openssl = "0.10.31"
postgres = "0.18.1"
serde = "1.0.118"
serde_json = "1.0.60"
dotenv = "0.15.0"
