[package]
name = "simple_crud"
version = "0.1.0"
authors = ["Telmo \"Trooper\" <telmo.trooper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.3.2"
dotenv = "0.15.0"
env_logger = "0.8.2"
serde = "1.0.118"
serde_json = "1.0.60"
sqlx = { version = "0.4.2", features = [ "postgres", "runtime-actix-native-tls" ] }
